--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\User\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.mysql-connector-java-5.1.23-bin.jar=D:\\Libraries\\Documents\\_Programming\\NetbeansProjects\\HHSLegerDesHeils\\lib\\mysql-connector-java-5.1.23.jar
+user.properties.file=C:\\Users\\Ben\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
