--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,15 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/LegerDesHeilsApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
-file.reference.sqljdbc42.jar=..\\Downloads\\Microsoft JDBC Driver 6.0 for SQL Server\\sqljdbc_6.0\\enu\\jre8\\sqljdbc42.jar
+file.reference.mysql-connector-java-5.1.23.jar=lib\\mysql-connector-java-5.1.23.jar
 file.reference.sqljdbc42.jar-1=lib\\sqljdbc42.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${file.reference.sqljdbc42.jar}:\
-    ${file.reference.sqljdbc42.jar-1}
+    ${file.reference.sqljdbc42.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.23.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
